--- a/src/assets/scss/global/variables.scss
+++ b/src/assets/scss/global/variables.scss
@@ -6,7 +6,7 @@
   /* Background Colors */
   --color-bg: #fff;
   --color-bg-secondary: #f7f7f7;
-  --color-bg-accent: rgb(174, 182, 225);
+  --color-bg-accent: #05998c;
   --color-bg-hover: #f3f4f6cc;
 
   /* Text and Border Colors */
